porting to library